--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -32,6 +32,11 @@
 </head>
 <body>
     <h1> Ordenação dos Candidatos da EMPREL com base na nota da Prova  </h1>
+
+        <h3>Este é um projeto de estudo pessoal e não tem valor legal. Não possui ligação 
+            com a empresa que organizou o concurso ou qualquer outra entidade oficial. 
+            Todos os dados foram disponibilizados de forma pública na internet e os 
+            resultados aqui apresentados são para fins educacionais e de estudo.</h3>
     
     
     {% block content %}{% endblock %}
