--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
             <option value="{{ cargo }}" {% if cargo == cargo_selected %}selected{% endif %}>{{ cargo }}</option>
         {% endfor %}
     </select>
-    <input type="text" name="nome" placeholder="Digite o primeiro nome do candidato">
+    <input type="text" name="nome" placeholder="Primeiro nome do candidato">
     <input type="submit" value="Buscar">
 </form>
 
